# dir2text

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  dir2text.bash  pyproject.toml  requirements-dev.txt  requirements.txt  scripts.py  tox.ini
.gitea/workflows/: ci.yml  mirror-release-to-github.yml
docs/: index.md
docs/contributing/: development.md  style-guide.md
docs/getting-started/: basic-concepts.md  command-line.md  installation.md
docs/guides/custom-extensions/: exclusion-rules.md  output-formats.md
src/dir2text/: __init__.py  cli.py  dir2text.py  exceptions.py  exclusion_rules.py  file_content_printer.py  file_system_tree.py  token_counter.py  types.py
src/dir2text/cli/: __init__.py  argparser.py  main.py  safe_writer.py  signal_handler.py
src/dir2text/exclusion_rules/: __init__.py  base_rules.py  composite_rules.py  git_rules.py  size_rules.py
src/dir2text/file_system_tree/: __init__.py  binary_action.py  binary_detector.py  file_identifier.py  file_system_node.py  file_system_tree.py  permission_action.py
src/dir2text/io/: chunked_file_reader.py
src/dir2text/output_strategies/: base_strategy.py  json_strategy.py  xml_strategy.py
stubs/anytree/: __init__.pyi  node.pyi
stubs/humanfriendly/: __init__.pyi
tests/: conftest.py  test_cli_integration.py  test_dir2text.py  test_exceptions.py  test_exclusion_rules.py  test_file_content_printer.py  test_file_system_tree.py  test_token_counter.py
tests/cli/: test_argparser.py  test_main.py  test_safe_writer.py  test_signal_handler.py
tests/exclusion_rules/: test_composite_rules.py  test_git_rules.py  test_size_rules.py
tests/file_system_tree/: __init__.py  test_binary_action.py  test_binary_detector.py  test_file_identifier.py  test_file_system_node.py  test_file_system_tree.py  test_permission_action.py
tests/integration/: test_cli.py
tests/io/: test_chunked_file_reader.py
tests/output_strategies/: test_json_strategy.py  test_xml_strategy.py
