[tool.poetry]
name = "dir2text"
version = "3.0.1"
description = "A Python library and command-line tool for expressing directory structures and file contents in formats suitable for Large Language Models (LLMs). It combines directory tree visualization with file contents in a memory-efficient, streaming format."
repository = "https://github.com/rlichtenwalter/dir2text.git"
authors = ["Ryan N. Lichtenwalter <rlichtenwalter@gmail.com>"]
maintainers = ["Ryan N. Lichtenwalter <rlichtenwalter@gmail.com>"]
packages = [{include = "dir2text", from = "src"}]
keywords = ["large language model", "LLM", "token", "tokenizer", "SLOC", "tree", "code assistant"]
readme = "README.md"
license = "MIT"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
issues = "https://github.com/rlichtenwalter/dir2text/issues"
changelog = "https://github.com/rlichtenwalter/dir2text/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.9.1,<4.0"
anytree = "^2.12.0"
pathspec = "^0.12.1"
tiktoken = {version = ">=0.6.0", optional = true}
humanfriendly = "^10.0"

[tool.poetry.extras]
token_counting = ["tiktoken"]
all = ["tiktoken"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pyright = "^1.1.408"
pytest = "^8.3.0"
pytest-cov = "^5.0.0"
ruff = "^0.15.5"
tox = "^4.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dir2text = "dir2text.cli.main:main"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "S",      # flake8-bandit
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]           # assert usage expected in tests
"tests/integration/**/*.py" = [
    "S101",  # assert usage expected in tests
    "S110",  # try-except-pass acceptable in test cleanup
    "S602",  # shell=True needed for CLI integration tests
    "S603",  # subprocess calls expected in CLI integration tests
]

[tool.ruff.lint.isort]
known-first-party = ["dir2text"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.9"
include = ["src"]
stubPath = "stubs"
reportMissingTypeStubs = false
reportUnnecessaryIsInstance = false  # library validates types at API boundaries

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v -ra -q --doctest-modules"
testpaths = [
    "tests",
    "src",
]