[project]
name = "dir2text"
version = "3.1.0"
description = "A Python library and command-line tool for expressing directory structures and file contents in formats suitable for Large Language Models (LLMs). It combines directory tree visualization with file contents in a memory-efficient, streaming format."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9.1"
authors = [
    {name = "Ryan N. Lichtenwalter", email = "rlichtenwalter@gmail.com"},
]
maintainers = [
    {name = "Ryan N. Lichtenwalter", email = "rlichtenwalter@gmail.com"},
]
keywords = ["large language model", "LLM", "token", "tokenizer", "SLOC", "tree", "code assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "anytree>=2.12.0,<3",
    "pathspec>=0.12.1,<0.13",
    "humanfriendly>=10.0,<11",
]

[project.optional-dependencies]
token_counting = ["tiktoken>=0.6.0"]
all = ["tiktoken>=0.6.0"]

[project.urls]
Repository = "https://github.com/rlichtenwalter/dir2text.git"
Issues = "https://github.com/rlichtenwalter/dir2text/issues"
Changelog = "https://github.com/rlichtenwalter/dir2text/blob/main/CHANGELOG.md"

[project.scripts]
dir2text = "dir2text.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dir2text"]

[dependency-groups]
dev = [
    "bandit>=1.7.0,<2",
    "deptry>=0.22.0",
    "pre-commit>=4.0.1,<5",
    "pyright>=1.1.408,<2",
    "pytest>=8.3.0,<9",
    "pytest-cov>=5.0.0,<6",
    "ruff>=0.15.5,<0.16",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "S",      # flake8-bandit
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]           # assert usage expected in tests
"tests/integration/**/*.py" = [
    "S101",  # assert usage expected in tests
    "S110",  # try-except-pass acceptable in test cleanup
    "S602",  # shell=True needed for CLI integration tests
    "S603",  # subprocess calls expected in CLI integration tests
]

[tool.ruff.lint.isort]
known-first-party = ["dir2text"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.9"
include = ["src"]
stubPath = "stubs"
reportMissingTypeStubs = false
reportUnnecessaryIsInstance = false  # library validates types at API boundaries

[tool.bandit]
exclude_dirs = ["tests"]
skips = [
    "B406",   # xml.sax.saxutils.escape is used for output escaping, not XML parsing
]

[tool.deptry]
extend_exclude = [".venv", "tests", "__pycache__", ".pytest_cache", "build", "dist"]
known_first_party = ["dir2text"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v -ra -q --doctest-modules"
testpaths = [
    "tests",
    "src",
]
